--- a/backend/package.json
+++ b/backend/package.json
@@ -12,10 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "marked": "^16.1.2",
     "mongoose": "^8.5.1",
     "nodemailer": "^6.9.14"
   },
